<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.weatherforecast.ui.details.DetailsViewModel" />

        <variable
            name="weather"
            type="com.example.weatherforecast.data.local.CityWeather" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:transitionName="@string/city_weather_transition">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="?attr/colorPrimary"
                android:transitionName="@string/city_weather_transition"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="30dp">

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/weather_icon"
                        android:src="@drawable/ic_10d"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white"
                        app:weatherIcon="@{weather.icon}" />

                    <TextView
                        android:id="@+id/details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{weather.weatherDescription}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/big_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/icon"
                        tools:text="Heavy Rain" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/medium_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/details"
                        app:setDate="@{@string/date_pattern}"
                        tools:text="Sunday, 02 Oct" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/temperature_concat(weather.temperature)}"
                        android:textColor="@color/white"
                        android:textSize="50sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date"
                        tools:text="25º" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/temp_min"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/small_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:padding="@dimen/medium_padding"
                        app:layout_constraintEnd_toStartOf="@+id/temp_max"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3">

                        <ImageView
                            android:id="@+id/imageView_temp_min"
                            android:layout_width="@dimen/medium_icon"
                            android:layout_height="@dimen/medium_icon"
                            android:contentDescription="@string/wind_icon"
                            android:src="@drawable/ic_thermostat_black_24dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/white" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/start_margin"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView_temp_min"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/temperature"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{@string/temperature_concat(weather.temperature)}"
                                android:textColor="@color/white"
                                tools:text="13º" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/temp_max"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/small_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:padding="@dimen/medium_padding"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/temp_min"
                        app:layout_constraintTop_toBottomOf="@+id/textView3">

                        <ImageView
                            android:id="@+id/imageView_temp_max"
                            android:layout_width="@dimen/medium_icon"
                            android:layout_height="@dimen/medium_icon"
                            android:contentDescription="@string/humidity_icon"
                            android:src="@drawable/ic_gauge_black_24dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/white" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/start_margin"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView_temp_max"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pressure"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{@string/pressure_concat(weather.pressure)}"
                                android:textColor="@color/white"
                                tools:text="100mbar" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/wind"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/small_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:padding="@dimen/medium_padding"
                        app:layout_constraintEnd_toStartOf="@+id/humidity"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/temp_min">

                        <ImageView
                            android:id="@+id/imageView_wind"
                            android:layout_width="@dimen/medium_icon"
                            android:layout_height="@dimen/medium_icon"
                            android:contentDescription="@string/wind_icon"
                            android:src="@drawable/ic_wind_black_24dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/white" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/start_margin"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView_wind"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{@string/speed_concat(weather.windSpeed)}"
                                android:textColor="@color/white"
                                tools:text="25km/h" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/humidity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/small_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:padding="@dimen/medium_padding"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/wind"
                        app:layout_constraintTop_toBottomOf="@+id/temp_min">

                        <ImageView
                            android:id="@+id/imageView_humdity"
                            android:layout_width="@dimen/medium_icon"
                            android:layout_height="@dimen/medium_icon"
                            android:contentDescription="@string/humidity_icon"
                            android:src="@drawable/ic_humidity_black_24dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/white" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/start_margin"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView_humdity"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{@string/percentage_concat(weather.humidity)}"
                                android:textColor="@color/white"
                                tools:text="70%" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>

