<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.weatherforecast.ui.home.HomeViewModel" />

        <variable
            name="weather"
            type="com.example.weatherforecast.data.local.CityWeather" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:refreshing="@{viewModel.refreshing}">


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/current_location_weather_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:backgroundTint="?attr/colorPrimary"
                        android:transitionName="current_weather_transition"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="16dp">

                            <ImageView
                                android:id="@+id/location_icon"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:contentDescription="@string/location_icon"
                                android:src="@drawable/ic_location_on_24"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/city"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{weather.city}"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                app:layout_constraintStart_toEndOf="@+id/location_icon"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="Lisbon" />

                            <TextView
                                android:id="@+id/country"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{`,` + weather.country}"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                app:layout_constraintBottom_toBottomOf="@+id/city"
                                app:layout_constraintStart_toEndOf="@+id/city"
                                tools:text=", PT" />

                            <ImageView
                                android:id="@+id/current_location_icon"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:contentDescription="@string/current_weather_icon"
                                app:layout_constraintBottom_toTopOf="@+id/weather_statte"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:tint="@color/white"
                                app:weatherIcon="@{weather.icon}" />

                            <TextView
                                android:id="@+id/weather_temperature"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@{@string/temperature_concat(weather.temperature)}"
                                android:textColor="@color/white"
                                android:textSize="35sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/city" />

                            <TextView
                                android:id="@+id/weather_statte"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@{weather.weatherDescription}"
                                android:textColor="@color/white"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="@+id/current_location_icon"
                                tools:text=", PT" />


                            <ImageView
                                android:id="@+id/wind_img"
                                android:layout_width="@dimen/small_icon"
                                android:layout_height="@dimen/small_icon"
                                android:layout_marginTop="10dp"
                                android:contentDescription="@string/wind_icon"
                                android:src="@drawable/ic_wind_black_24dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/weather_temperature"
                                app:tint="@color/white" />

                            <TextView
                                android:id="@+id/wind_la"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/start_margin"
                                android:text="@{@string/speed_concat(weather.windSpeed)}"
                                android:textColor="@color/white"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/wind_img"
                                app:layout_constraintTop_toTopOf="@+id/wind_img" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/main_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:orientation="vertical"
                        android:visibility="@{viewModel.loading ? View.INVISIBLE : View.VISIBLE}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
